<package>
  <name>static_deployment_demo</name>
  <version>1.0.0</version>
  <description>This package contains the components of the static_deployment_demo package</description>
  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>

  <license>GPL v2 with linking exception</license>

  <url type="website"></url>
  <!-- <url type="bugtracker"></url> -->

  <author>Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>

  <build_depend>rtt</build_depend>
  <run_depend>rtt</run_depend>

  <build_depend>ocl</build_depend>
  <run_depend>ocl</run_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_geometry_msgs</plugin_depend>
    </rtt_ros>
  </export>

</package>
